fix fields
