# zetachain-cctx/zetachain-cctx-logic/src/models.rs
@@ -166,6 +166,10 @@ pub struct CctxListItem {
     pub last_update_timestamp: NaiveDateTime,
     pub source_chain_id: String,
     pub target_chain_id: String,
+    pub sender_address: String,
+    pub receiver_address: String,
+    pub asset: String,
+    pub coin_type: String,
 }
 
 #[derive(Debug)]
